travis email notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: Java
+notifications:
+  email:
+    recipients:
+      - janpietrzak00@gmail.com
+    on_success: never # default: change
+    on_failure: always # default: always
