--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>pl.put.poznan</groupId>
     <artifactId>TextTransformer</artifactId>
-    <version>1.0</version>
+    <version>v1.0</version>
     <packaging>jar</packaging>
 
 	<properties>
