--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,17 @@ notifications:
     on_success: never # default: change
     on_failure: always # default: always
 
-jobs:
-  include:
-    - stage: GitHub Release
-      script: skip
-      before_deploy:
-        - export GIT_TAG=1.5.$TRAVIS_BUILD_NUMBER
-        - mvn test javadoc:jar
-        - cp target/text-transformer-1.5-javadoc.jar target/javadoc-1.5.jar
-      deploy:
-        provider: releases
-        token: $GITHUB_OAUTH
-        file:
-          - target/text-transformer-1.5.jar
-          - target/javadoc-1.5.jar
-        edge: true
-        tag_name: $GIT_TAG
-        on:
-          tags: false
-          branch: main
+after_success:
+  - mvn --quiet clean site
+
+before_deploy:
+  - "mvn -DskipTests package"
+
+deploy:
+  provider: releases
+  api_key: $github_token
+  skip_cleanup: true
+  file: target/TextTransformer.jar
+  on:
+    tags:
+      true
