--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,30 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
                 <configuration>
                     <javadocExecutable>
                         ${java.home}/bin/javadoc
                     </javadocExecutable>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <message>Building site for ${project.version}</message>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>site</phase>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
@@ -115,15 +133,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.1.1</version>
-                <configuration>
-                    <show>private</show>
-                </configuration>
             </plugin>
         </plugins>
     </reporting>
-    <scm>
-        <url>https://github.com/opurie/TextTransformer</url>
-        <connection>scm:git:git://github.com/opurie/TextTransformer.git</connection>
-    </scm>
 
 </project>
