NumberToTextTransformer merged with FloatToFixedTransformer

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ notifications:
   email:
     recipients:
       - janpietrzak00@gmail.com
+      - matjonne@gmail.com
     on_success: never # default: change
     on_failure: always # default: always
 
